@@ -3778,6 +3778,24 @@ with players in the area. It will end their combat, clean up items in
 the rooms they are in, and otherwise freeze them up while the reset
 process completes. This process can be time consuming for large areas,
 so take that into consideration.</p>
+      <h3><a name="mprpexp">mprpexp</a></h3>
+      <p>Usage:</p>
+      <pre>mprpexp [target] [exp amount]<br />mprpexp [target] [pct exp to next level%]<br /></pre>
+      <p>This command gives an
+amount of Role Play experience to the target, or a
+percentage of the experience they need to the next level. This is a
+useful command to use to award players for doing special in character
+things. If you want to award more experience than
+the capped amount, you can have the mob give several experience awards
+in a row. It is best when you award an experience award to give some
+sort of message to the player about why they are receiving the award.</p>
+      <p>EXAMPLES:</p>
+      <pre>mprpexp $n 500<br />mprpexp $n 10%<br /></pre>
+SPECIAL NOTES: Players
+can level off of these experience
+awards. Be careful with this
+command. You don't want to give out awards for every little thing
+characters do.&nbsp;
       <h3><a name="mpsavevar">mpsavevar</a></h3>
       <p>Usage:</p>
       <pre>mpsavevar [mob name] [variable name]<br /></pre>
